chore: 修改 .gitignore 和 .dockerignore；删除多余文件 refactor: 重构上传、下载 Excel 文件模块，可以进行异步上传、下载